Save github token to local storage

--- a/app/popup.html
+++ b/app/popup.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="content container">
-  <form>
+  <form id="options">
     <div class="form-group">
       <label for="oAuthInput">Github Oauth token</label>
       <input type="text" class="form-control" id="oAuthInput" placeholder="Github Oauth token">
